# postgres_data_accessor

./: .coverage  .coveragerc  .gitignore  README.md  main.py  pyproject.toml
config/: database_config_example.toml
src/: main.py
src/data_accessor/: __init__.py
src/data_accessor/application/: music_query_controller.py
src/data_accessor/domain/: abstract_music_query_repository.py  abstract_music_query_service.py  music_query_service.py
src/data_accessor/domain/exceptions/: forbidden_sql_statement_exception.py  sql_statement_execution_exception.py
src/data_accessor/domain/interfaces/: abstract_music_query_repository.py  abstract_music_query_service.py
src/data_accessor/domain/services/: _music_query_service.py  music_query_service.py
src/data_accessor/infrastructure/: database_config.py  music_query_repository.py
src/data_accessor/infrastructure/repositories/: _music_query_repository.py  music_query_repository.py
tests/: conftest.py  run_tests.py  test_music_query_controller.py  test_music_query_repository.py  test_music_query_service.py
