[project]
name = "data-accessor"
version = "0.2.5"
description = "Data access solution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.11.7",
    "pytest-pythonpath>=0.7.3",
    "sqlalchemy[asyncio]>=2.0.42",
    "sqlparse>=0.5.3",
    "toml>=0.10.2",
    "toml-cli>=0.8.1",
]

[project.scripts]
data-accessor = "data_accessor:main"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
asyncio_mode = "auto"
log_cli = true
log_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_accessor"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-pythonpath>=0.7.3",
]
