[project]
name = "data-accessor"
version = "0.2.5"
description = "Data access solution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "hatch>=1.14.1",
    "pydantic>=2.11.7",
    "sqlalchemy[asyncio]>=2.0.42",
    "sqlparse>=0.5.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["data_accessor"]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-pythonpath>=0.7.3"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
log_cli = true
log_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.envs.dev]
dependencies = ["data-accessor[dev]"]
variables = { PYTHONPATH = "src" }
test = "pytest tests"

[tool.hatch.envs.dev.scripts]
test = "pytest tests"
test-changed = "pytest --testmon"


